packages/cashc/test/compiler/InvalidSymbolTypeError/class_name_as_function.cash
contract Test() {
    return {
        hello() {
            require(LockingBytecodeP2PKH(bytes20(0)) == bytes34(0));
        }
    }
}
